# openllmindex

./: .geminiignore  .gitignore  .qwenignore  LICENSE  README.md  ROADMAP.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml  test.yml
.qwen/: settings.json
cli/importers/: csv_importer.py  json_importer.py  shopify_importer.py
cli/llmindex_cli/: main.py
cli/llmindex_cli/generators/: feed.py  manifest.py  pages.py
cli/sample_data/: sample.csv  sample_shopify.csv
cli/tests/: test_csv_importer.py  test_generators.py  test_importers.py  test_spec.py  test_validators.py
design-system/llmindex-portal/: MASTER.md
docs/: CORE_DEV_PLAN.md  index.html
examples/: demo.py  test_demo.py  validate.mjs
integrations/nextjs/: README.md
integrations/wordpress/: README.md
llmindex/importers/: csv_importer.py  json_importer.py  shopify_importer.py
llmindex/llmindex_cli/: config.py  main.py  models.py  validators.py
llmindex/llmindex_cli/commands/: __init__.py  sign.py  verify_sig.py  watch.py
llmindex/llmindex_cli/generators/: feed.py  manifest.py  pages.py
llmindex/sample_data/: sample.json
llmindex/tests/: test_cli.py  test_csv_importer.py  test_generators.py  test_importers.py  test_sign.py  test_spec.py  test_validators.py  test_verify_sig.py  test_watch.py
portal-prototype/: dashboard.html  landing.html
spec/: spec.md  spec.zh.md
spec/examples/automotive/: llmindex.json
spec/examples/automotive/feed/: products.jsonl
spec/examples/beauty/: llmindex.json
spec/examples/beauty/feed/: products.jsonl
spec/examples/blog/: llmindex.json
spec/examples/blog/llm/: about.md  faq.md  policies.md  products.md
spec/examples/ecommerce/: llmindex.json
spec/examples/ecommerce/feed/: products.jsonl
spec/examples/ecommerce/llm/: about.md  faq.md  policies.md  products.md
spec/examples/ecommerce/llm/de/: about.md  products.md
spec/examples/ecommerce/llm/es/: about.md  products.md
spec/examples/ecommerce/llm/fr/: about.md  products.md
spec/examples/ecommerce/llm/ja/: about.md  products.md
spec/examples/ecommerce/llm/zh/: about.md  products.md
spec/examples/education/: llmindex.json
spec/examples/education/feed/: products.jsonl
spec/examples/fintech/: llmindex.json
spec/examples/fitness/: llmindex.json
spec/examples/fitness/feed/: products.jsonl
spec/examples/food-beverage/: llmindex.json
spec/examples/food-beverage/feed/: products.jsonl
spec/examples/gaming/: llmindex.json
spec/examples/gaming/feed/: products.jsonl
spec/examples/healthcare/: llmindex.json
spec/examples/home-decor/: llmindex.json
spec/examples/home-decor/feed/: products.jsonl
spec/examples/jewelry/: llmindex.json
spec/examples/jewelry/feed/: products.jsonl
spec/examples/kids/: llmindex.json
spec/examples/kids/feed/: products.jsonl
spec/examples/local-business/: llmindex.json
spec/examples/local-business/llm/: about.md  faq.md  policies.md  products.md
spec/examples/marketplace/: llmindex.json
spec/examples/marketplace/feed/: products.jsonl
spec/examples/marketplace/llm/: about.md  faq.md  policies.md  products.md
spec/examples/nonprofit/: llmindex.json
spec/examples/pet/: llmindex.json
spec/examples/pet/feed/: products.jsonl
spec/examples/real-estate/: llmindex.json
spec/examples/real-estate/feed/: products.jsonl
spec/examples/restaurant/: llmindex.json
spec/examples/restaurant/llm/: about.md  faq.md  policies.md  products.md
spec/examples/saas/: llmindex.json
spec/examples/saas/llm/: about.md  faq.md  policies.md  products.md
spec/examples/travel/: llmindex.json
spec/examples/wellness/: llmindex.json
spec/examples/wellness/feed/: products.jsonl
spec/schemas/: llmindex-0.1.schema.json
spec/test-vectors/: README.md  invalid-bad-dates.json  invalid-bad-urls.json  invalid-extra-fields.json  invalid-feed.jsonl  invalid-http-url.json  invalid-missing-required.json  invalid-v02-bad-access-control.json  invalid-v02-bad-languages.json  invalid-v02-bad-localized-endpoints.json  valid-minimal.json  valid-v02-full.json  valid-v02-minimal.json  valid-with-verify.json
